# retico-dino

./: README.md  pyproject.toml
retico_dino/: __init__.py  dino.py
